--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ jobs:
       - run: npm run test-chromium
       - run: npm run test-firefox
       - run: npm run test-webkit
+      - run: npm run cart-test-chromium
+      - run: npm run cart-test-firefox
+      - run: npm run cart-test-webkit
 
       - store_artifacts:
           path: ./playwright-report
