--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test-chromium": "playwright test --config=playwright.config.js .tests/login.spec.js --project chromium",
     "test-firefox": "playwright test --config=playwright.config.js .tests/login.spec.js --project firefox",
     "test-webkit": "playwright test --config=playwright.config.js .tests/login.spec.js --project webkit",
-    "cart-test-chromium": "playwright test --config=playwright.config.js .tests/cart.spec.js --project chromium",
-    "cart-test-firefox": "playwright test --config=playwright.config.js .tests/cart.spec.js --project firefox",
-    "cart-test-webkit": "playwright test --config=playwright.config.js .tests/cart.spec.js --project webkit"
+    "product-test-chromium": "playwright test --config=playwright.config.js .tests/products.spec.js --project chromium",
+    "product-test-firefox": "playwright test --config=playwright.config.js .tests/products.spec.js --project firefox",
+    "product-test-webkit": "playwright test --config=playwright.config.js .tests/products.spec.js --project webkit"
   },
   "keywords": [],
   "author": "",
